// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetHeaderDetails matches custom props snapshot 1`] = `
<div
  class="c-card c-bg-info"
>
  <div
    class="c-card-header"
  >
    <div
      class="c-font-weight-bold"
    >
      <span>
        rightHeader
      </span>
       
      <span
        class="c-float-right"
      >
        leftHeader
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter
        </small>
      </span>
       
      <span
        class="c-float-right"
      >
        <small>
          leftFooter
        </small>
      </span>
    </div>
     
  </div>
</div>
`;

exports[`CWidgetHeaderDetails matches default props snapshot 1`] = `
<div
  class="c-card c-bg-primary"
>
  <div
    class="c-card-header"
  >
    <div
      class="c-font-weight-bold"
    >
      <!---->
       
      <!---->
    </div>
     
    <div>
      <span>
        <!---->
      </span>
       
      <span
        class="c-float-right"
      >
        <!---->
      </span>
    </div>
     
  </div>
</div>
`;
